--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>makcro</title>
+        <title>makcro</title>
         <meta charset="utf-8" />
     </head>
     <body style="margin: 0%;">
