--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>makcro</title>
-        <title>makcro</title>
+        <title>makcro!</title>
         <meta charset="utf-8" />
     </head>
     <body style="margin: 0%;">
