--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                         clientId:
                             '18830208597-7qaf4bhu75likfndk231vmaul0ckel01.apps.googleusercontent.com',
                         discoveryDocs: [
+                            'https://docs.googleapis.com/$discovery/rest?version=v1',
                             'https://www.googleapis.com/discovery/v1/apis/drive/v3/rest'
                         ],
                         scope: 'https://www.googleapis.com/auth/drive'
@@ -59,62 +60,53 @@
                             ) {
                                 gapi.auth2.getAuthInstance().signIn()
                             }
-                            listFiles()
-                            uploadFile()
+                            printDocTitle()
                         },
                         error => {
-                            appendPre(JSON.stringify(error, null, 2))
+                            console.log(JSON.stringify(error, null, 2))
                         }
                     )
             }
-            let appendPre = message => {
-                console.log(message)
-            }
-            let uploadFile = () => {
-                gapi.client.drive.files
-                    .create(
-                        {
-                            resource: {
-                                name: 'TESTWORKED',
-                                mimeType: 'application/vnd.google-apps.folder'
-                            },
-                            fields: 'id'
+            function printDocTitle() {
+                gapi.client.drive.files.create(
+                    {
+                        resource: {
+                            name: 'makcro'
                         },
-                        function(err, file) {
-                            if (err) {
-                                console.error(err)
-                            } else {
-                                console.log('Folder Id: ', file.id)
-                            }
+                        media: {
+                            mimeType: 'application/vnd.google-apps.document',
+                            body: ''
+                        },
+                        fields: 'id'
+                    },
+                    function(err, file) {
+                        if (err) {
+                            // Handle error
+                            console.error(err)
+                        } else {
+                            console.log('File Id: ', file.id)
+                        }
+                    }
+                )
+                gapi.client.docs.documents
+                    .get({
+                        documentId:
+                            '195j9eDD3ccgjQRttHhJPymLJUCOUjs-jmwTrekvdjFE'
+                    })
+                    .then(
+                        function(response) {
+                            var doc = response.result
+                            var title = doc.title
+                            console.log(
+                                'Document "' + title + '" successfully found.'
+                            )
+                        },
+                        function(response) {
+                            console.log(
+                                'Error: ' + response.result.error.message
+                            )
                         }
                     )
-                    .execute()
-            }
-            let listFiles = () => {
-                gapi.client.drive.files
-                    .list({
-                        pageSize: 10,
-                        fields: 'nextPageToken, files(id, name, mimeType)'
-                    })
-                    .then(response => {
-                        appendPre('Files:')
-                        let files = response.result.files
-                        if (files && files.length > 0) {
-                            for (let i = 0; i < files.length; i++) {
-                                let file = files[i]
-                                if (
-                                    file.mimeType ==
-                                    'application/vnd.google-apps.folder'
-                                ) {
-                                    if (file.name == 'makcro') {
-                                    }
-                                }
-                                appendPre(file.name + ' (' + file.id + ')')
-                            }
-                        } else {
-                            appendPre('No files found.')
-                        }
-                    })
             }
         </script>
         <script
